trunk/src/objects/TaskActivity__c.object
<CustomObject>
    <description>Object for tracking changes within a task</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>ChangeType</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedBy__c</fullName>
        <label>ModifiedBy</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewName__c</fullName>
        <label>NewName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <label>ProjectId</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>TaskActivites</relationshipLabel>
        <relationshipName>TaskActivites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <label>TimeStamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>TaskActivity</label>
    <nameField>
        <label>TaskActivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskActivites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>